{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 9,
  "lineage": "df86208b-4214-ecc8-2cb6-4ef9a4ebf0e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e58b56aa4d64231b",
            "arn": "arn:aws:ec2:us-east-1:277707126380:instance/i-086b76b0c9128873d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086b76b0c9128873d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0069aa5cba108b896",
            "private_dns": "ip-172-31-87-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.9",
            "public_dns": "ec2-3-82-190-172.compute-1.amazonaws.com",
            "public_ip": "3.82.190.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036e5f0623a184488",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "security_1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8e03170dddfc567",
            "tags": {
              "Name": "terraform1"
            },
            "tags_all": {
              "Name": "terraform1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0414f7ce6f0ccc7c8"
            ]
          },
          "dependencies": [
            "aws_security_group.security_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07706bb32254a7fe5",
            "arn": "arn:aws:ec2:us-west-1:277707126380:instance/i-067af492bd84fb53f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067af492bd84fb53f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ed5e00e1d20e6d0",
            "private_dns": "ip-172-31-3-118.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.118",
            "public_dns": "ec2-52-53-154-39.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.154.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0730819df24842549",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "security_2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a9e6585f1210a8c",
            "tags": {
              "Name": "terraform-2"
            },
            "tags_all": {
              "Name": "terraform-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b27ba45f2eb91b4"
            ]
          },
          "dependencies": [
            "aws_security_group.security_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707126380:security-group/sg-0414f7ce6f0ccc7c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0414f7ce6f0ccc7c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_1",
            "name_prefix": "",
            "owner_id": "277707126380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websecuritygroup-east"
            },
            "tags_all": {
              "Name": "websecuritygroup-east"
            },
            "timeouts": null,
            "vpc_id": "vpc-041503a1b98b2236b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:277707126380:security-group/sg-07b27ba45f2eb91b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b27ba45f2eb91b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_2",
            "name_prefix": "",
            "owner_id": "277707126380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websecuritygroup-west"
            },
            "tags_all": {
              "Name": "websecuritygroup-west"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a704fc99e610036"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}